--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timeline Pro - Fixed Quick View</title>
+    <title>To-do Timeline - Fixed Preview</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -19,7 +19,7 @@
         @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
         .animate-in { animation: fadeIn 0.3s ease-out; }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
-        .modal-overlay { background: rgba(0, 0, 0, 0.8); backdrop-filter: blur(8px); }
+        .modal-overlay { background: rgba(0, 0, 0, 0.8); backdrop-filter: blur(10px); }
     </style>
 </head>
 <body>
@@ -68,13 +68,11 @@
 
             useEffect(() => {
                 if (!user) return;
-                const unsubscribe = db.collection("notes")
-                    .where("userId", "==", user.uid)
+                return db.collection("notes").where("userId", "==", user.uid)
                     .onSnapshot((s) => {
                         const data = s.docs.map(d => ({ id: d.id, ...d.data() }));
                         setNotes(data.sort((a, b) => (b.timestamp?.seconds || 0) - (a.timestamp?.seconds || 0)));
                     });
-                return () => unsubscribe();
             }, [user]);
 
             const filteredNotes = useMemo(() => {
@@ -128,18 +126,25 @@
                     });
                     setText(""); setFile(null);
                     if(fileInputRef.current) fileInputRef.current.value = "";
-                } catch (err) { alert("Lỗi gửi dữ liệu: " + err.message); } finally { setUploading(false); }
+                } catch (err) { alert("Lỗi: " + err.message); } finally { setUploading(false); }
             };
 
-            // Hàm chuẩn hóa URL để ép hiển thị thay vì tải xuống
-            const getPreviewUrl = (url) => {
+            // HÀM QUAN TRỌNG: Chuyển link download sang link preview để xem trực tiếp
+            const formatDriveUrl = (url, type = 'preview') => {
                 if (!url) return "";
-                // Chuyển đổi các dạng link Drive thành dạng preview
-                return url.replace(/export=download|export=view/g, 'preview');
+                // Tách ID file từ link (đối với định dạng uc?id=...)
+                const fileIdMatch = url.match(/id=([^&]+)/);
+                if (fileIdMatch && fileIdMatch[1]) {
+                    const id = fileIdMatch[1];
+                    return type === 'preview' 
+                        ? `https://drive.google.com/file/d/${id}/preview`
+                        : `https://drive.google.com/uc?export=download&id=${id}`;
+                }
+                return url;
             };
 
             if (!user) return (
-                <div className="h-screen flex items-center justify-center bg-white p-6">
+                <div className="h-screen flex items-center justify-center bg-white">
                     <button onClick={() => auth.signInWithPopup(provider)} className="px-8 py-4 bg-black text-white rounded-2xl font-semibold shadow-xl hover:scale-105 transition-all">Đăng nhập Timeline</button>
                 </div>
             );
@@ -149,9 +154,9 @@
                     <header className="flex items-center justify-between mb-8">
                         <div className="flex items-center gap-4">
                             <img src={user.photoURL} className="w-12 h-12 rounded-full border-2 border-white shadow-md" />
-                            <h1 className="font-extrabold text-xl tracking-tight">Timeline Cloud</h1>
+                            <h1 className="font-extrabold text-xl tracking-tight text-gray-900">Timeline Cloud</h1>
                         </div>
-                        <button onClick={() => auth.signOut()} className="text-[10px] font-bold text-gray-400 uppercase tracking-widest hover:text-red-500 transition-colors">Đăng xuất</button>
+                        <button onClick={() => auth.signOut()} className="text-[10px] font-bold text-gray-400 uppercase tracking-widest hover:text-red-500">Đăng xuất</button>
                     </header>
 
                     <div className="mb-10 relative">
@@ -160,7 +165,7 @@
                             placeholder="Tìm kiếm thông minh..." 
                             value={searchTerm}
                             onChange={(e) => setSearchTerm(e.target.value)}
-                            className="w-full bg-white border border-gray-100 rounded-[1.5rem] py-4 px-12 shadow-sm outline-none focus:border-blue-300 transition-all text-sm"
+                            className="w-full bg-white border border-gray-100 rounded-[1.5rem] py-4 px-12 shadow-sm outline-none focus:border-blue-400 transition-all text-sm"
                         />
                         <svg className="w-5 h-5 text-gray-300 absolute left-4 top-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/></svg>
                     </div>
@@ -190,9 +195,10 @@
                                                         </div>
                                                         <div className="flex-1 overflow-hidden">
                                                             <p className="text-[11px] font-bold text-gray-600 truncate">{note.fileName}</p>
-                                                            <p className="text-[9px] text-gray-400 font-bold uppercase tracking-tighter">Click để xem nhanh nội dung</p>
+                                                            <p className="text-[9px] text-gray-400 font-bold uppercase tracking-tighter">Click xem nhanh nội dung</p>
                                                         </div>
-                                                        <a href={note.fileUrl.replace('preview', 'export=download')} onClick={(e) => e.stopPropagation()} target="_blank" className="text-blue-600 p-2 hover:bg-white rounded-full transition-all"><svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M4 16v1a2 2 0 002 2h12a2 2 0 002-2v-1m-4-4l-4 4m0 0l-4-4m4 4V4"/></svg></a>
+                                                        {/* Nút tải xuống thực sự (dùng link download) */}
+                                                        <a href={formatDriveUrl(note.fileUrl, 'download')} onClick={(e) => e.stopPropagation()} target="_blank" className="text-blue-600 p-2 hover:bg-white rounded-full transition-all"><svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M4 16v1a2 2 0 002 2h12a2 2 0 002-2v-1m-4-4l-4 4m0 0l-4-4m4 4V4"/></svg></a>
                                                     </div>
                                                 )}
                                             </div>
@@ -203,7 +209,7 @@
                         ))}
                     </div>
 
-                    {/* MODAL QUICK VIEW - SỬA LỖI TỰ ĐỘNG TẢI */}
+                    {/* MODAL XEM NHANH - ÉP HIỂN THỊ PREVIEW */}
                     {selectedFile && (
                         <div className="fixed inset-0 z-[100] flex items-center justify-center p-4 modal-overlay animate-in" onClick={() => setSelectedFile(null)}>
                             <div className="bg-white w-full max-w-4xl rounded-[2.5rem] overflow-hidden shadow-2xl relative" onClick={e => e.stopPropagation()}>
@@ -214,22 +220,19 @@
                                 <div className="w-full h-[75vh] bg-gray-100">
                                     {selectedFile.fileType?.startsWith('image/') ? (
                                         <div className="w-full h-full flex items-center justify-center p-4">
-                                            <img src={getPreviewUrl(selectedFile.fileUrl)} className="max-w-full max-h-full object-contain shadow-lg rounded-lg" />
+                                            <img src={formatDriveUrl(selectedFile.fileUrl, 'preview')} className="max-w-full max-h-full object-contain shadow-lg rounded-lg" />
                                         </div>
-                                    ) : selectedFile.fileType === 'application/pdf' ? (
+                                    ) : (
                                         <iframe 
-                                            src={getPreviewUrl(selectedFile.fileUrl)} 
+                                            src={formatDriveUrl(selectedFile.fileUrl, 'preview')} 
                                             className="w-full h-full" 
                                             frameBorder="0"
                                             title="Quick View"
                                         ></iframe>
-                                    ) : (
-                                        <div className="h-full flex flex-col items-center justify-center text-gray-400 space-y-4 p-10 text-center">
-                                            <svg className="w-16 h-16" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/></svg>
-                                            <p className="text-sm font-medium">Trình duyệt không hỗ trợ xem nhanh loại file này.</p>
-                                            <a href={selectedFile.fileUrl.replace('preview', 'export=download')} target="_blank" className="px-8 py-3 bg-blue-600 text-white rounded-2xl text-xs font-bold shadow-xl hover:bg-blue-700 transition-all">Tải xuống để xem</a>
-                                        </div>
                                     )}
+                                </div>
+                                <div className="p-4 bg-gray-50 flex justify-center">
+                                    <a href={formatDriveUrl(selectedFile.fileUrl, 'download')} className="px-10 py-3 bg-blue-600 text-white rounded-2xl text-[10px] font-bold shadow-xl hover:bg-blue-700 transition-all">Tải về máy</a>
                                 </div>
                             </div>
                         </div>
@@ -245,7 +248,7 @@
                             )}
                             <div className="flex gap-2 justify-center">
                                 {LABELS.map(l => (
-                                    <button key={l.id} onClick={() => setActiveLabel(l.id)} className={`px-5 py-2 rounded-full text-[10px] font-bold transition-all ${activeLabel === l.id ? 'bg-black text-white shadow-lg' : 'bg-white text-gray-400 border border-gray-100'}`}>{l.id}</button>
+                                    <button key={l.id} onClick={() => setActiveLabel(l.id)} className={`px-5 py-2 rounded-full text-[10px] font-bold transition-all ${activeLabel === l.id ? 'bg-black text-white shadow-lg scale-105' : 'bg-white text-gray-400 border border-gray-100'}`}>{l.id}</button>
                                 ))}
                             </div>
                             <form onSubmit={handleSubmit} className="bg-white shadow-2xl rounded-[2.5rem] p-2 border border-gray-100">
